infra_old/stack/promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail-daemon
spec:
  selector:
    matchLabels:
      name: promtail-daemon
  template:
    metadata:
      labels:
        name: promtail-daemon
    spec:
      serviceAccount: promtail-service-account
      serviceAccountName: promtail-service-account
      volumes:
      - name: promtail-config
        configMap:
          name: promtail-config
      - name: logs
        hostPath:
          path: /var/log
      containers:
      - name: promtail-daemon
        image: grafana/promtail
        args:
        - -config.file=/etc/promtail/promtail.yaml
        volumeMounts:
        - name: promtail-config
          mountPath: /etc/promtail
        - name: logs
          mountPath: /var/log
